[gd_scene load_steps=5 format=2]

[ext_resource path="res://source/scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/c4.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/title_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/menu_theme.tres" type="Theme" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 480.0
margin_bottom = 320.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.25098, 0.270588, 0.364706, 1 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -138.0
margin_right = 410.0
margin_bottom = 138.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="VBox"]
margin_right = 360.0
margin_bottom = 60.0
theme = ExtResource( 3 )
text = "Shaping Colors"

[node name="Play" type="Button" parent="VBox"]
margin_top = 70.0
margin_right = 360.0
margin_bottom = 114.0
size_flags_vertical = 7
text = "New Game"

[node name="Continue" type="Button" parent="VBox"]
margin_top = 124.0
margin_right = 360.0
margin_bottom = 168.0
size_flags_vertical = 7
disabled = true
text = "Continue"

[node name="ChooseColors" type="Button" parent="VBox"]
margin_top = 178.0
margin_right = 360.0
margin_bottom = 222.0
size_flags_vertical = 7
disabled = true
text = "Choose Colors"

[node name="Options" type="Button" parent="VBox"]
margin_top = 232.0
margin_right = 360.0
margin_bottom = 276.0
size_flags_vertical = 7
text = "Options"

[node name="Controls" type="Button" parent="VBox"]
margin_top = 286.0
margin_right = 360.0
margin_bottom = 330.0
size_flags_vertical = 7
text = "Controls"

[node name="ChooseColorsMenu" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -320.0
margin_bottom = 320.0

[node name="VBox" type="VBoxContainer" parent="ChooseColorsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_right = -25.0

[node name="Title" type="Label" parent="ChooseColorsMenu/VBox"]
margin_right = 430.0
margin_bottom = 44.0
text = "Choose the Initial Colors:"

[node name="OptionButton" type="OptionButton" parent="ChooseColorsMenu/VBox"]
margin_top = 48.0
margin_right = 430.0
margin_bottom = 92.0
text = "Color 01"
items = [ "Color 01", null, false, 0, null, "Color 02", null, false, 1, null, "Color 03", null, false, 2, null, "Color 04", null, false, 3, null ]
selected = 0

[node name="ColorPicker" type="ColorPicker" parent="ChooseColorsMenu/VBox"]
margin_left = 8.0
margin_top = 104.0
margin_right = 438.0
margin_bottom = 640.0
edit_alpha = false
deferred_mode = true
presets_enabled = false
presets_visible = false

[node name="OptionsMenu" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -320.0
margin_bottom = 320.0

[node name="Grid" type="GridContainer" parent="OptionsMenu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -125.5
margin_bottom = 125.5
custom_constants/vseparation = 25
columns = 2

[node name="MasterVol" type="Label" parent="OptionsMenu/Grid"]
margin_right = 183.0
margin_bottom = 44.0
text = "Master Volume:"

[node name="HBox1" type="HBoxContainer" parent="OptionsMenu/Grid"]
margin_left = 260.0
margin_right = 480.0
margin_bottom = 44.0
size_flags_horizontal = 10

[node name="VolValue" type="Label" parent="OptionsMenu/Grid/HBox1"]
margin_right = 16.0
margin_bottom = 44.0
text = "0"

[node name="VolSlider" type="HSlider" parent="OptionsMenu/Grid/HBox1"]
margin_left = 20.0
margin_right = 220.0
margin_bottom = 44.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = -25.0
max_value = 0.0
step = 0.1

[node name="MusicVol" type="Label" parent="OptionsMenu/Grid"]
margin_top = 69.0
margin_right = 183.0
margin_bottom = 113.0
text = "Music Volume:"

[node name="HBox2" type="HBoxContainer" parent="OptionsMenu/Grid"]
margin_left = 260.0
margin_top = 69.0
margin_right = 480.0
margin_bottom = 113.0
size_flags_horizontal = 10

[node name="VolValue" type="Label" parent="OptionsMenu/Grid/HBox2"]
margin_right = 16.0
margin_bottom = 44.0
text = "0"

[node name="VolSlider" type="HSlider" parent="OptionsMenu/Grid/HBox2"]
margin_left = 20.0
margin_right = 220.0
margin_bottom = 44.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = -25.0
max_value = 0.0
step = 0.1

[node name="SFXVolume" type="Label" parent="OptionsMenu/Grid"]
margin_top = 138.0
margin_right = 183.0
margin_bottom = 182.0
text = "SFX Volume:"

[node name="HBox3" type="HBoxContainer" parent="OptionsMenu/Grid"]
margin_left = 260.0
margin_top = 138.0
margin_right = 480.0
margin_bottom = 182.0
size_flags_horizontal = 10

[node name="VolValue" type="Label" parent="OptionsMenu/Grid/HBox3"]
margin_right = 16.0
margin_bottom = 44.0
text = "0"

[node name="VolSlider" type="HSlider" parent="OptionsMenu/Grid/HBox3"]
margin_left = 20.0
margin_right = 220.0
margin_bottom = 44.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = -25.0
max_value = 0.0
step = 0.1

[node name="VoiceVol" type="Label" parent="OptionsMenu/Grid"]
margin_top = 207.0
margin_right = 183.0
margin_bottom = 251.0
text = "Voice Volume:"

[node name="HBox4" type="HBoxContainer" parent="OptionsMenu/Grid"]
margin_left = 260.0
margin_top = 207.0
margin_right = 480.0
margin_bottom = 251.0
size_flags_horizontal = 10

[node name="VolValue" type="Label" parent="OptionsMenu/Grid/HBox4"]
margin_right = 16.0
margin_bottom = 44.0
text = "0"

[node name="VolSlider" type="HSlider" parent="OptionsMenu/Grid/HBox4"]
margin_left = 20.0
margin_right = 220.0
margin_bottom = 44.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 1
min_value = -25.0
max_value = 0.0
step = 0.1

[node name="ControlsMenu" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -320.0
margin_bottom = 320.0

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsMenu"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -91.0
margin_bottom = 91.0
size_flags_vertical = 3
custom_constants/separation = 25

[node name="Label" type="Label" parent="ControlsMenu/VBoxContainer"]
margin_right = 480.0
margin_bottom = 44.0
text = "Controls: Mouse only"
align = 1
uppercase = true

[node name="Label3" type="Label" parent="ControlsMenu/VBoxContainer"]
margin_top = 69.0
margin_right = 480.0
margin_bottom = 113.0
text = "Left Click to Select and Place"
align = 1

[node name="Label4" type="Label" parent="ControlsMenu/VBoxContainer"]
margin_top = 138.0
margin_right = 480.0
margin_bottom = 182.0
text = "Right Click to 'Erase'"
align = 1

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )
limit_left = 0
limit_top = 0

[node name="AudioButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[connection signal="button_down" from="VBox/Play" to="." method="_on_Play_button_down"]
[connection signal="button_down" from="VBox/Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="VBox/ChooseColors" to="." method="_on_ChooseColors_button_down"]
[connection signal="button_down" from="VBox/Options" to="." method="_on_Options_button_down"]
[connection signal="button_down" from="VBox/Controls" to="." method="_on_Controls_button_down"]
[connection signal="item_selected" from="ChooseColorsMenu/VBox/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="color_changed" from="ChooseColorsMenu/VBox/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="value_changed" from="OptionsMenu/Grid/HBox1/VolSlider" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="OptionsMenu/Grid/HBox2/VolSlider" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="OptionsMenu/Grid/HBox3/VolSlider" to="." method="_on_sfx_value_changed"]
[connection signal="value_changed" from="OptionsMenu/Grid/HBox4/VolSlider" to="." method="_on_voice_value_changed"]
